# qt6printers

./: .gitignore  README.md  gdbinit
install/: .gdbinit
install/.gdb/qt6printers/: qt.py  utils.py
test/: CMakeLists.txt  main.cpp
